--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -43,6 +43,10 @@ table {
 Theme Styles
 *******************************************************************************/
 
+html {
+  height: 100%;
+}
+
 body {
   box-sizing: border-box;
   color:#373737;
@@ -281,18 +285,44 @@ Full-Width Styles
   border-bottom-right-radius: 2px;
 }
 
-#header_wrap {
+#home_header_wrap {
   background-image: url('../images/rotoset.jpg');
-    background-repeat:no-repeat;
-    background-size:cover;
-/*
+  background-repeat:no-repeat;
+  background-size:cover;
+}
+
+#home_header_wrap .inner {
+  padding: 50px 10px 30px 10px;
+}
+
+#home_header_wrap.outer {
+  width: 100%;
+  height: 90vh;
+}
+
+#post_header_wrap {
+  background-image: url('../images/dgrule.jpg');
+  background-repeat:no-repeat;
+  background-size:cover;
+}
+
+#post_header_wrap .inner {
+  padding: 50px 10px 30px 10px;
+}
+
+#post_header_wrap.outer {
+  width: 100%;
+  min-height: 180px;
+  height: 30vh;
+}
+
+#header_wrap {
   background: #2121F1;
   background: -moz-linear-gradient(top, #373737, #2121F1);
   background: -webkit-linear-gradient(top, #373737, #2121F1);
   background: -ms-linear-gradient(top, #373737, #2121F1);
   background: -o-linear-gradient(top, #373737, #2121F1);
   background: linear-gradient(top, #373737, #2121F1);
-*/
 }
 
 #header_wrap .inner {
@@ -301,9 +331,7 @@ Full-Width Styles
 
 #header_wrap.outer {
   width: 100%;
-  height: 90vh;
 }
-
 
 #project_title {
   margin: 0;
@@ -314,6 +342,22 @@ Full-Width Styles
 }
 
 #project_tagline {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 300;
+  background: none;
+  text-shadow: #111 0px 0px 10px;
+}
+
+#post_title {
+  margin: 0;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 700;
+  text-shadow: #111 0px 0px 10px;
+}
+
+#post_date {
   color: #fff;
   font-size: 24px;
   font-weight: 300;
@@ -360,22 +404,64 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat top right;
 }
 
+.Site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.Site-content {
+  flex: 1;
+}
+
+#post-wrapper {
+  flex: 1;
+  width: 100%;
+  background: #f2f2f2;
+  border-top: 1px solid #111;
+  border-bottom: 1px solid #111;
+}
+
+#post-content {
+  padding-top: 20px;
+}
+
 #main_content_wrap {
   background: #f2f2f2;
   border-top: 1px solid #111;
   border-bottom: 1px solid #111;
 }
 
+#main_content_wrap.outer {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 #main_content {
   padding-top: 20px;
+  flex: 1;
 }
 
 #footer_wrap {
   background: #212121;
 }
 
+/*
+#footer_wrap.outer {
+  width: 100%;
+  max-height: 150px;
+}
 
-
+#footer_wrap.outer {
+ clear: both;
+ position: relative;
+ z-index: 10;
+ height: 3em;
+ margin-top: -3em;
+}
+*/
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
