--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,44 +12,32 @@
     <title>{{ site.title | default: site.github.repository_name }}</title>
   </head>
 
-  <body>
+  <body class="Site">
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <div class="outer"
+    {% if page.cover %} style="background-image:url({{ site.baseurl }}{{ page.cover_image }});background-repeat:no-repeat;background-size:cover;{% if page.no_content %}flex:1;{% else %}height:{{ page.cover_height }};{% endif %}min-height:150px" {% endif %} >
         <header class="inner">
-<!--
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
--->
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
+          {% include nav.html %}
+          <h1 id="project_title">{{ page.cover_title | default: site.github.repository_name }}</h1>
+          <h2 id="project_tagline">{{ page.cover_description | default: site.github.project_tagline }}</h2>
         </header>
     </div>
 
+    {% unless page.no_content %}
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        {{ content }}
-      </section>
-    </div>
+      <main id="main-wrap">
+        <div id="main-content" class="inner">
+          {{ content }}
+        </div>
+      </main>
+    {% endunless %}
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-
+      <div id="footer_wrap" class="outer">
+        <footer class="inner">
+          <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        </footer>
+      </div>
 
   </body>
 </html>
