--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,80 +12,18 @@
     <title>{{ site.title | default: site.github.repository_name }}</title>
   </head>
 
-  <body>
+  <body class="Site">
 
     <!-- HEADER -->
-    <div id="post_header_wrap" class="outer">
+    <div class="outer" style="background-image:url('/assets/images/dgrule.jpg');background-repeat:no-repeat;background-size:cover;height:30vh;min-height:150px">
         <header class="inner">
-<!--
-          <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
-
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <p id="post_date" class="meta">{{ site.description | default: site.github.project_tagline }}</p>
--->
+          {% include nav.html %}
           <h1 id="post_title">{{ page.title }}</h1>
           <h2 id="post_date" class="meta">{{ page.date | date_to_string }}</h2>
-
-          {% if site.show_downloads %}
-            <section id="downloads">
-              <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
-            </section>
-          {% endif %}
         </header>
     </div>
 
-
-    <!-- MAIN CONTENT -->
-<!--
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-      <section id="main_content">
-        {{ content }}
-      </section>
-
-
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    </div>
--->
-
-    <body class="Site">
-      <main id="post-wrapper">
-        <div id="post-content" class="inner">
-          {{ content }}
-        </div>
-      </main>
-
-      <div id="footer_wrap" class="outer">
-        <footer class="inner">
-          <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-        </footer>
-      </div>
-    </body>      
-
-
-
-
-    <!-- FOOTER  -->
-<!--
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
--->
-
+    {% include sticky_footer.html %}
 
   </body>
 </html>
