--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
   <body class="Site">
 
     <!-- HEADER -->
-    <div class="outer" style="background-image:url('/assets/images/dgrule.jpg');background-repeat:no-repeat;background-size:cover;height:30vh;min-height:150px">
+    <div class="outer" style="background-image:url('/assets/images/dgrule.jpg');background-repeat:no-repeat;background-size:cover;background-position:center;height:30vh;min-height:150px">
         <header class="inner">
           {% include nav.html %}
           <h1 id="post_title">{{ page.title }}</h1>
